--- a/src/component/field/index.scss
+++ b/src/component/field/index.scss
@@ -25,15 +25,13 @@
         transition: border-color 0.3s;
 
         &:hover {
-            border-color: s.color('gray');
+            border-color: s.color(gray);
         }
 
         &:focus {
             border-color: s.color('main');
         }
 
-        &--error {
-            border-color: s.color(red)  !important;
-        }
+        
     }
 }
