--- a/src/container/signup/index.hbs
+++ b/src/container/signup/index.hbs
@@ -19,6 +19,10 @@
        {{> field-password action="signupForm.change" label="Пароль"  name="password" placeholder="Введіть пароль"}}
         <span name="password" class="form__error">Помилка</span>
       </div>
+      <div class="form__item">
+       {{> field-password action="signupForm.change" label="Пароль ще раз"  name="passwordAgain" placeholder="Введіть пароль"}}
+        <span name="passwordAgain" class="form__error">Помилка</span>
+      </div>
        <div class="form__item">
        {{> field-select action="signupForm.change" label="Pоль"  name="role" placeholder="Оберіть роль" list=data.role}}
         <span name="role" class="form__error">Помилка</span>
@@ -29,7 +33,7 @@
       </div>
     </div>
   <button onclick="signupForm.submit()" class="button button--disabled" type="button">Зареєструватися</button>
-  <span class="alert alert--error">Внимание, ошибка! </span>
+  <span class="alert alert--disabled">Внимание, ошибка! </span>
 
   <span class="link__prefix">Маєте акаунт? <a href="/login" class="link">Увійти</a></span>
   </form>
