--- a/src/style/form.scss
+++ b/src/style/form.scss
@@ -18,6 +18,10 @@
         &--active {
             display: block;
         }
+
+        &--disabled {
+            display: none;
+        }
     }
 }
 .button {
@@ -30,6 +34,17 @@
 
     &:active {
         opacity: 0.3;
+    }
+
+    &--disabled {
+        opacity: 0.4;
+        cursor: default;
+
+        &:hover,
+        &:active {
+            opacity: 0.5;
+            cursor: default;
+        }
     }
 }
 
@@ -52,5 +67,14 @@
     &--progress {
         border-color: s.color(blue);
         color: s.color(blue);
+    }
+    &--disabled {
+        display: none;
+    }
+}
+
+.validation {
+    &--active {
+        border-color: s.color(red) !important;
     }
 }
