--- a/src/layout/default/index.scss
+++ b/src/layout/default/index.scss
@@ -43,4 +43,10 @@ body {
 		font-size: 24px;
 		color: s.color('dark');
 	}
+
+	&__subtitle {
+		font-size: 14px;
+		color: s.color(gray);
+		line-height: 1.5em;
+	}
 }
